tests/NormalTests/paczka1/fuzzy1/17257132.err
Error in line 6: A736 A736 96,6
Error in line 13: A736 S530 62,5
Error in line 17: A736 A596 58,5
Error in line 11: mwE3Nt4 S744 44,4
Error in line 22: mwE3Nt4 A596 50,8
Error in line 24: A736 S744 91,0
Error in line 25: 0gv A736 19,9
Error in line 31: A736 A736 92,0
Error in line 26: mwE3Nt4 S530 6,3
